# openrouteservice-py

./: .condarc  .coverage  .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG  CONTRIBUTORS  ISSUE_TEMPLATE.md  README.md  README.rst  cleanup.sh  codecov.yml  diesel.ipynb  environment.yml  index.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_simple.py  setup.py  test-requirements.txt  tests-config.ini  tests-config.sample.ini  tox.ini
.spyproject/: workspace.ini
.vitepress/: config.mts
conda.recipe/: bld.bat  build.sh  meta.yaml
docs/: AlternativeRoutes.md  DirectionsService.md  DirectionsService1.md  DirectionsServiceApi.md  DirectionsServiceBody.md  ElevationApi.md  ElevationLineBody.md  ElevationPointBody.md  EngineInfo.md  GeoJSONFeature.md  GeoJSONFeatureGeometry.md  GeoJSONFeatureProperties.md  GeoJSONFeaturesObject.md  GeoJSONGeometryObject.md  GeoJSONIsochroneBase.md  GeoJSONIsochroneBaseGeometry.md  GeoJSONIsochronesResponse.md  GeoJSONIsochronesResponseFeatures.md  GeoJSONIsochronesResponseMetadata.md  GeoJSONIsochronesResponseMetadataEngine.md  GeoJSONPointGeometry.md  GeoJSONPropertiesObject.md  GeoJSONPropertiesObjectCategoryIds.md  GeoJSONPropertiesObjectCategoryIdsCategoryId.md  GeoJSONPropertiesObjectOsmTags.md  GeoJSONRouteResponse.md  GeoJSONRouteResponseMetadata.md  GeoJSONSnappingResponse.md  GeoJSONSnappingResponseFeatures.md  GeoJSONSnappingResponseMetadata.md  GeocodeApi.md  GeocodeResponse.md  Gpx.md  GraphExportService.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2001Geometry.md  InlineResponse2002.md  InlineResponse2002Routes.md  InlineResponse2002Steps.md  (+107 more)
examples/: Avoid_ConstructionSites.html  Avoid_ConstructionSites.ipynb  Dieselgate_Routing.html  Dieselgate_Routing.ipynb  Routing_Optimization_Idai.html  Routing_Optimization_Idai.ipynb  basic_example.ipynb  ortools_pubcrawl.html  ortools_pubcrawl.ipynb
openrouteservice/: __init__.py  api_client.py  client.py  configuration.py  convert.py  deprecation.py  directions.py  distance_matrix.py  elevation.py  exceptions.py  geocode.py  geocoding.py  isochrones.py  optimization.py  places.py  rest.py  utility.py  validator.py
test/: __init__.py  conftest.py  test_alternative_routes.py  test_client.py  test_convert.py  test_deprecation_warning.py  test_directions.py  test_directions_service.py  test_directions_service1.py  test_directions_service_api.py  test_distance_matrix.py  test_elevation.py  test_elevation_api.py  test_elevation_line_body.py  test_elevation_point_body.py  test_engine_info.py  test_exceptions.py  test_geo_json_features_object.py  test_geo_json_geometry_object.py  test_geo_json_isochrone_base.py  test_geo_json_isochrone_base_geometry.py  test_geo_json_isochrones_response.py  test_geo_json_isochrones_response_features.py  test_geo_json_isochrones_response_metadata.py  test_geo_json_isochrones_response_metadata_engine.py  test_geo_json_properties_object.py  test_geo_json_properties_object_category_ids.py  test_geo_json_properties_object_category_ids_category_id.py  test_geo_json_properties_object_osm_tags.py  test_geo_json_route_response.py  test_geo_json_route_response_metadata.py  test_geocode.py  test_geocode_api.py  test_geocode_response.py  test_geocoding.py  test_gpx.py  test_graph_export_service.py  test_helper.py  test_inline_response200.py  (+82 more)
(+183 files in other folders)
