[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openrouteservice"
version = "7.1.1.post2"
authors = ["HeiGIT gGmbH <support@smartmobility.heigit.org>"]
description = "Python client for requests to openrouteservice API services"
readme = "README.md"
keywords = ["routing","accessibility","router","OSM","ORS","openrouteservice","openstreetmap","isochrone","POI","elevation","DEM","swagger"]
license = "Apache 2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
urllib3 = "^2.2.1"
six = "^1.16.0"
certifi = "^2024.2.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"
pytest-xdist = "^3.5.0"
pluggy = "^1.4.0"
py = "^1.11.0"
randomize = "^0.14"
tox = "^4.14.1"

[tool.pytest.ini_options]
addopts = "--cov=openrouteservice --cov-report xml --cov-report term-missing --cov-fail-under 50 -n auto"

[tool.poetry.urls]
homepage = "https://openrouteservice.org/"
"Forum" = "https://ask.openrouteservice.org/c/sdks"
"API Documentation" = "https://openrouteservice.org/documentation/"
"API Terms of service" = "https://openrouteservice.org/terms-of-service/"
